--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "ts-node src/index.ts",
     "seed": "ts-node src/seed.ts",
+    "cleanup:quota": "ts-node src/cleanupQuota.ts",
     "build": "tsc",
     "start": "node dist/index.js"
   },
